samples/_failures_safe/1761521064_eff430_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73a237ce.c: In function ‘main’:
./samples/SAFE/__tmp_73a237ce.c:144:9: error: expected expression at end of input
  144 |         } else if (strcmp(entries[i].level, "INFO") ==
      |         ^
./samples/SAFE/__tmp_73a237ce.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_73a237ce.c:144:9: error: expected declaration or statement at end of input
